examples/type_error/main.js
load('./mod.js').then(function (mod) {
    console.log(mod);
})
